src/sass/pages/hotel/_room-for-2.scss
.room-section {
  position: relative;
}

.hotel-wrap-top {
  @include tablet {
    display: flex;
  }
}

.room-wrap-top {
  @include tablet {
    display: flex;
    flex-direction: column;
    margin-bottom: 126px;
  }

  @include desktop {
    margin-bottom: 188px;
  }
}

.hotel-logo {
  display: block;
  margin-bottom: 32px;

  @include tablet {
    @include font(700, 64px, 1.08, 0.3em);
    margin-bottom: 62px;
  }

  @include desktop {
    margin-bottom: 72px;
  }
}

.room-wrap-center {
  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
  border-radius: 2px;

  @include mobilemax {
    margin-left: auto;
    width: 244px;
    margin-top: 32px;
  }

  @include tablet {
    position: absolute;
    right: 112px;
    top: -32px;
    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
  }

  @include desktop {
    right: 185px;
  }
}

.hotel-wrap-bottom {
  position: relative;
  @include tablet {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
}

.room-slider-thumb {
  // overflow: hidden;
  @include mobilemax {
    position: relative;
    top: 0;
    left: -15px;
    padding-top: 32px;
    padding-right: 100px;
    padding-bottom: 72px;
  }
  @include tablet {
    padding-top: 48px;
    padding-right: 60px;
    padding-bottom: 25px;
  }

  @include desktop {
    padding-bottom: 0px;
  }
}

.hotel-room-slider {
  @include tablet {
    max-width: 428px;
  }

  @include desktop {
    max-width: 548px;
  }
}

.hotel-room-slider .slic-active {
  opacity: 1;
  border-radius: 2px;
  box-shadow: 2px 2px 32px 2px rgba(0, 0, 0, 0.25);

  @include tablet {
    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
  }
}

.hotel-room-slider .slick-list {
  @include mobilemax {
    border-radius: 2px;
    box-shadow: 2px 2px 32px 2px rgba(0, 0, 0, 0.25);
    padding-left: 90px;
  }
}

.room-svg {
  cursor: pointer;
  top: 28px;
  display: flex;
  position: relative;
  fill: $colorBlack;

  @include mobilemax {
    left: 16px;
  }

  @include tablet {
    top: 40px;
  }

  @include desktop {
    top: 48px;
    left: 450px;
    fill: $colorTextModal;
  }
}

.room-svg-left {
  margin-right: 34px;
  transition: fill $transDuration $cubic;

  &:hover,
  &:focus {
    fill: $colorAccentYellow;
  }
}

.room-svg-right {
  transition: fill $transDuration $cubic;

  &:hover,
  &:focus {
    fill: $colorAccentYellow;
  }
}

.room-wrap-bottom {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding-left: 80px;
  @include tablet {
    margin-bottom: 81px;
  }
}

.hotel-link {
  display: flex;
  justify-content: center;
  align-items: center;
}

